# technoblog

./: docker-compose.yml  pyproject.toml  requirements.txt
alembic/: README  alembic.ini  env.py  script.py.mako
app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
app/routers/: admin.py  articles.py  auth.py  comments.py  complaints.py  reviews.py  users.py
tests/: test_main.py
