### `pyproject.toml`

```toml
# pyproject.toml
[tool.poetry]
name = "my_blog_service"
version = "0.1.0"
description = "A blog service built with FastAPI and PostgreSQL"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
alembic = "^1.6.5"
python-dotenv = "^0.19.0"
pydantic = "^1.8.2"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"